# log_hub

./: Cargo.toml
migrations/: V1__initial.sql  V2__sql_function__random_string.sql  V3__sql_function__generate_unique_string.sql
src/: main.rs
src/adapters/api/: mod.rs
src/adapters/spi/postgres/: connection.rs  migrations.rs  mod.rs
src/application/: mod.rs
src/application/repositories/: mod.rs
src/application/services/: log.rs  mod.rs  user.rs
src/application/utils/: date_times.rs  mod.rs  system_log.rs
src/domain/: constants.rs  log_entity.rs  mod.rs  user_entity.rs
src/infrastructure/: config.rs
static/openapi/: openapi-schema.yml
templates/: index.html.tera  login.html.tera  swagger_ui.html.tera
templates/base/: base.html.tera  headers.html.tera  navbar.html.tera  sidebar.html.tera
